--- a/docs/content/docs/core/config/index.mdx
+++ b/docs/content/docs/core/config/index.mdx
@@ -98,8 +98,8 @@ Continue by configuring [symbols](/docs/core/config/symbols),
 
 At the heart of your game lies the actual [implementation](/docs/core/game-flow).
 
-Finally, [simulate](/docs/core/simulation) your game, tweak settings to improve the feel of it,
-and [optimize](/docs/core/optimization) results to achieve your desired RTP.
+Finally, [simulate](/docs/core/game-tasks/simulation) your game, tweak settings to improve the feel of it,
+and [optimize](/docs/core/game-tasks/optimization) results to achieve your desired RTP.
 
 ## createSlotGame() Options [#options]
 
