--- a/docs/content/docs/core/config/result-sets.mdx
+++ b/docs/content/docs/core/config/result-sets.mdx
@@ -128,7 +128,7 @@ Let's say you have these 3 result sets:
 The total quota here is 100 (but can be any number, doesn't have to be 100).
 This means that, for example, every 100th simulation will result in a max win.
 
-**When using** [optimization](/docs/core/optimization), the quota **does not represent the actual frequency** of specific outcomes when playing,
+**When using** [optimization](/docs/core/game-tasks/optimization), the quota **does not represent the actual frequency** of specific outcomes when playing,
 because the optimizer will redistribute the weights of all simulations.
 
 ### multiplier [!toc]
