--- a/docs/content/docs/core/core-concepts.mdx
+++ b/docs/content/docs/core/core-concepts.mdx
@@ -60,7 +60,7 @@ Each simulation result is stored temporarily until it's either accepted or rejec
 When accepted, the result is stored permanently, the state resets, and a new simulation begins.
 When rejected, the simulation retries until acceptance criteria are met.
 
-[Further reading](/docs/core/simulation)
+[Further reading](/docs/core/game-tasks/simulation)
 
 ### Result Set
 
@@ -74,7 +74,7 @@ Result sets allow you to **enforce specific outcome quotas**, ensuring simulatio
 
 The process of recalculating weights for all outcomes to achieve a specific target [RTP](#rtp).
 
-[Further reading](/docs/core/optimization)
+[Further reading](/docs/core/game-tasks/optimization)
 
 ### RTP
 
