--- a/docs/content/docs/core/game-context/data-service.mdx
+++ b/docs/content/docs/core/game-context/data-service.mdx
@@ -61,7 +61,7 @@ Each added event receives an auto-incremented index, allowing the frontend to pr
 
 ### Recorder
 
-The recorder allows grouping simulations by arbitrary criteria. If using [optimization](/docs/core/optimization),
+The recorder allows grouping simulations by arbitrary criteria. If using [optimization](/docs/core/game-tasks/optimization),
 this would allow you to target specific simulations to optimize.
 It also enables capturing notable runs (e.g. max win simulations) so they can be replayed locally for debugging or demonstration.
 
