--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -117,7 +117,7 @@ Get started creating your first game using the `@slot-engine/core` library.
     Future versions may support additional platforms as they emerge.
     Output customization is not available at this time.
 
-    [Learn more](/docs/core/simulation) about game simulations.
+    [Learn more](/docs/core/game-tasks/simulation) about game simulations.
   </Step>
 </Steps>
 
