feat: add temporary ai genned cluster calculation

--- a/docs/content/docs/core/game-tasks/simulation.mdx
+++ b/docs/content/docs/core/game-tasks/simulation.mdx
@@ -94,12 +94,13 @@ to achieve a specific target RTP with high precision.
 <Accordions>
   <Accordion title="My simulation is very slow or stuck">
     The most common reason for why your simulation might be stuck or progress very slowly is that
-    certain **outcomes are very rare** or might **never occurr** naturally, for example max wins.
+    certain **outcomes are very rare** or might **never occur** naturally, for example max wins.
 
     If you're noticing that simulating max wins or other rare criteria slows down your simulation,
     there's a few things you can do:
 
     - Make it easier for the program to simulate rare outcomes, for example by using a dedicated
     reel set with more wilds and generally higher symbols.
+    - Programmatically force the desired outcome (board setup, multipliers, etc.)
   </Accordion>
 </Accordions>
